--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
 
         <service android:name=".service.LocationService"
+            android:foregroundServiceType="location"
             android:enabled="true" />
 
         <!-- https://developers.google.com/maps/documentation/android-sdk/get-api-key -->
