--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.+'
-    testImplementation "io.insert-koin:koin-test:$koin_version"
-    testImplementation "io.insert-koin:koin-test-junit4:$koin_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // Koin
-    implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -73,12 +71,6 @@ dependencies {
     implementation "com.github.tbruyelle:rxpermissions:$rxpermissions_version"
 
     implementation "androidx.recyclerview:recyclerview:$androix_recyclerview_version"
-
-    //MVI-Core
-    implementation "com.github.badoo.mvicore:binder:$mvicore"
-    implementation "com.github.badoo.mvicore:mvicore:$mvicore"
-    implementation "com.github.badoo.mvicore:mvicore-android:$mvicore"
-    implementation "com.github.badoo.mvicore:mvicore-diff:$mvicore"
 
     /*//OpenStreetMap
     implementation "org.osmdroid:osmdroid-android:$OSM"*/
