--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext{
         kotlin_version = '1.5.20'
-        koin_version = '3.1.2'
+        dagger_version = '2.38.1'
         room_version = '2.3.0'
         //room_compiler = '2.2.6'
         androix_recyclerview_version = '1.2.1'
