--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext{
         kotlin_version = '1.5.20'
         dagger_version = '2.38.1'
+        navigation_version = '2.3.5'
         room_version = '2.3.0'
         //room_compiler = '2.2.6'
         androix_recyclerview_version = '1.2.1'
@@ -14,6 +15,7 @@ buildscript {
         rxbinding3_version = '3.1.0'
         mvicore = '1.2.6'
         OSM = '6.1.10'
+        mockito_version = '3.7.7'
     }
 
     repositories {
